--- a/codes/Compare_stocktradingfees_merges.ipynb
+++ b/codes/Compare_stocktradingfees_merges.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,13 +40,13 @@
     "    '../datasets/주식거래 수수료_1000.xls'\n",
     "]\n",
     "\n",
-    "# 파일을 읽어올 데이터프레임 리스트\n",
+    "\n",
     "df_list = []\n",
     "\n",
-    "# 각 파일을 읽고 데이터프레임에 추가\n",
+    "\n",
     "for file_path in file_paths:\n",
     "    try:\n",
-    "        df = pd.read_excel(file_path, header=2)  # header=2로 시작하는 첫 번째 데이터 행을 읽음\n",
+    "        df = pd.read_excel(file_path, header=2)  \n",
     "        df_list.append(df)\n",
     "        print(f\"{file_path} 파일 읽기 성공\")\n",
     "    except Exception as e:\n",
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# 병합된 데이터를 CSV로 저장\n",
+    "# 병합된 데이터 CSV로 저장\n",
     "merged_df.to_csv('merged_data.csv', index=False)\n"
    ]
   },
@@ -95,13 +95,13 @@
    "source": [
     "\n",
     "\n",
-    "client = MongoClient('python_jupyternote_mongo-mongodb-1')  # MongoDB 주소와 포트 설정\n",
-    "db = client['pandas_db']  # 사용할 데이터베이스 이름 설정\n",
-    "collection = db['stocktradingfees_merge']  # 사용할 컬렉션 이름 설정\n",
+    "client = MongoClient('python_jupyternote_mongo-mongodb-1')  \n",
+    "db = client['pandas_db']  \n",
+    "collection = db['stocktradingfees_merge']  \n",
     "\n",
     "\n",
-    "data_dict = merged_df.to_dict(orient='records')  # 각 행을 딕셔너리로 변환\n",
-    "collection.insert_many(data_dict)  # 데이터 삽입\n"
+    "data_dict = merged_df.to_dict(orient='records')  \n",
+    "collection.insert_many(data_dict)  \n"
    ]
   },
   {
