--- a/codes/07.DataFrame_aggregations.ipynb
+++ b/codes/07.DataFrame_aggregations.ipynb
@@ -276,20 +276,414 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 1) (4002784590.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    df_first[df_first['테마] == '2차전지']\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>테마</th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>PER</th>\n",
+       "      <th>PBR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2차전지(생산)</td>\n",
+       "      <td>SK이노베이션</td>\n",
+       "      <td>10.19</td>\n",
+       "      <td>1.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2차전지(생산)</td>\n",
+       "      <td>LG화학</td>\n",
+       "      <td>83.06</td>\n",
+       "      <td>3.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         테마      종목명    PER   PBR\n",
+       "0  2차전지(생산)  SK이노베이션  10.19  1.29\n",
+       "5  2차전지(생산)     LG화학  83.06  3.75"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_first[df_first['테마] == '2차전지']\n"
+    "df_first[df_first['테마'] == '2차전지(생산)']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>테마</th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>PER</th>\n",
+       "      <th>PBR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2차전지(생산)</td>\n",
+       "      <td>SK이노베이션</td>\n",
+       "      <td>10.19</td>\n",
+       "      <td>1.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2차전지(생산)</td>\n",
+       "      <td>LG화학</td>\n",
+       "      <td>83.06</td>\n",
+       "      <td>3.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         테마      종목명    PER   PBR\n",
+       "0  2차전지(생산)  SK이노베이션  10.19  1.29\n",
+       "5  2차전지(생산)     LG화학  83.06  3.75"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_conditions_first = df_first[df_first['테마'] == '2차전지(생산)']\n",
+    "df_conditions_first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46.625"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_conditions_first['PER'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### group by"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>테마</th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>PER</th>\n",
+       "      <th>PBR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>해운</td>\n",
+       "      <td>팬오션</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>해운</td>\n",
+       "      <td>HMM</td>\n",
+       "      <td>21.52</td>\n",
+       "      <td>3.20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   테마  종목명    PER   PBR\n",
+       "1  해운  팬오션  21.23  0.95\n",
+       "3  해운  HMM  21.52  3.20"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#df_first.groupby('테마').get_group('2차전지(생산)')\n",
+    "df_first.groupby('테마').get_group('해운')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PER</th>\n",
+       "      <th>PBR</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>테마</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2차전지(생산)</th>\n",
+       "      <td>46.625</td>\n",
+       "      <td>2.520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>시스템반도체</th>\n",
+       "      <td>36.645</td>\n",
+       "      <td>2.335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>해운</th>\n",
+       "      <td>21.375</td>\n",
+       "      <td>2.075</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             PER    PBR\n",
+       "테마                     \n",
+       "2차전지(생산)  46.625  2.520\n",
+       "시스템반도체    36.645  2.335\n",
+       "해운        21.375  2.075"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#df_first.groupby('테마')['PER'].mean()\n",
+    "df_first.groupby('테마')[['PER','PBR']].mean()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### groupby with agg()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_45741/1095785427.py:2: FutureWarning: The provided callable <built-in function max> is currently using SeriesGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
+      "  df_first.groupby('테마').agg({'PER':[max,min], 'PBR':[max, min]})\n",
+      "/tmp/ipykernel_45741/1095785427.py:2: FutureWarning: The provided callable <built-in function min> is currently using SeriesGroupBy.min. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"min\" instead.\n",
+      "  df_first.groupby('테마').agg({'PER':[max,min], 'PBR':[max, min]})\n",
+      "/tmp/ipykernel_45741/1095785427.py:2: FutureWarning: The provided callable <built-in function max> is currently using SeriesGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
+      "  df_first.groupby('테마').agg({'PER':[max,min], 'PBR':[max, min]})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">PER</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">PBR</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>테마</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2차전지(생산)</th>\n",
+       "      <td>83.06</td>\n",
+       "      <td>10.19</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>1.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>시스템반도체</th>\n",
+       "      <td>37.32</td>\n",
+       "      <td>35.97</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>1.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>해운</th>\n",
+       "      <td>21.52</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            PER          PBR      \n",
+       "            max    min   max   min\n",
+       "테마                                \n",
+       "2차전지(생산)  83.06  10.19  3.75  1.29\n",
+       "시스템반도체    37.32  35.97  3.55  1.12\n",
+       "해운        21.52  21.23  3.20  0.95"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#df_first.groupby('테마').agg({'PER':min, 'PBR':max, })\n",
+    "df_first.groupby('테마').agg({'PER':[max,min], 'PBR':[max, min]})\n"
    ]
   },
   {
